# transferase

./: .clang-format  .clang-tidy  .cppcheck_suppress  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  config.h.in  iwyu.json
R/: .Rbuildignore  .lintr  CMakeLists.txt  DESCRIPTION  LICENSE_STUB  NAMESPACE  configure.ac  integration_tests.R
R/R/: exports.R  zzz.R
R/src/: CPPLINT.cfg  MClient.cpp  MClient.hpp  Makevars  Makevars.in  download_progress.hpp  exports.cpp  transferase_module.cpp  transferase_r.cpp  transferase_r.hpp
cli/: CMakeLists.txt  cli_common.hpp  command_check.cpp  command_check.hpp  command_compress.cpp  command_compress.hpp  command_config.cpp  command_config.hpp  command_config_argset.hpp  command_format.cpp  command_format.hpp  command_index.cpp  command_index.hpp  command_list.cpp  command_list.hpp  command_merge.cpp  command_merge.hpp  command_query.cpp  command_query.hpp  command_select.cpp  command_select.hpp  command_server.cpp  command_server.hpp  command_server_config.cpp  command_server_config.hpp  transferase.cpp
cli/CLI11/: CLI11.hpp
cli/tests/: CMakeLists.txt  command_check_test.cpp  command_config_test.cpp  command_format_test.cpp  command_index_test.cpp  command_merge_test.cpp  command_query_test.cpp  command_server_test.cpp  download_test.cpp  methylome_test.cpp  unit_test_utils.cpp  unit_test_utils.hpp  unit_test_utils_cli.cpp  unit_test_utils_cli.hpp
lib/: CMakeLists.txt  aligned_allocator.hpp  arguments.hpp  bins_writer.cpp  bins_writer.hpp  boost_json.hpp  chrom_range.hpp  client.hpp  client_base.hpp  client_config.cpp  client_config.hpp  client_connection.hpp  config_file_utils.cpp  config_file_utils.hpp  connection.cpp  connection.hpp  counts_file_format.cpp  counts_file_format.hpp  counts_file_format_impl.hpp  customize_asio.hpp  download.cpp  download.hpp  download_policy.cpp  download_policy.hpp  download_progress.hpp  environment_utilities.cpp  environment_utilities.hpp  find_path_to_binary.cpp  find_path_to_binary.hpp  format_error_code.hpp  genome_index.cpp  genome_index.hpp  genome_index_data.cpp  genome_index_data.hpp  genome_index_data_impl.hpp  genome_index_impl.hpp  genome_index_metadata.cpp  genome_index_metadata.hpp  genome_index_set.hpp  genomic_interval.cpp  (+84 more)
lib/include/: aligned_allocator.hpp  arguments.hpp  bins_writer.hpp  boost_json.hpp  chrom_range.hpp  client.hpp  client_config.hpp  config_file_utils.hpp  connection.hpp  counts_file_format.hpp  counts_file_format_impl.hpp  download.hpp  download_policy.hpp  environment_utilities.hpp  find_path_to_binary.hpp  format_error_code.hpp  genome_index.hpp  genome_index_data.hpp  genome_index_data_impl.hpp  genome_index_impl.hpp  genome_index_metadata.hpp  genome_index_set.hpp  genomic_interval.hpp  genomic_interval_impl.hpp  hash.hpp  intervals_writer.hpp  level_container.hpp  level_element.hpp  logger.hpp  lru_tracker.hpp  metadata_is_consistent.hpp  methylome.hpp  methylome_client_base.hpp  methylome_client_local.hpp  methylome_client_remote.hpp  methylome_data.hpp  methylome_interface.hpp  methylome_metadata.hpp  methylome_set.hpp  output_format_type.hpp  (+15 more)
lib/indicators/: indicators.hpp
lib/tests/: CMakeLists.txt  client_config_test.cpp  counts_file_format_test.cpp  download_test.cpp  genome_index_data_test.cpp  genome_index_metadata_test.cpp  genome_index_set_test.cpp  genome_index_test.cpp  genomic_interval_test.cpp  level_container_md_test.cpp  lru_tracker_test.cpp  methylome_client_test.cpp  methylome_data_test.cpp  methylome_name_list_test.cpp  methylome_set_test.cpp  methylome_test.cpp  remote_data_resource_test.cpp  request_handler_test.cpp  request_test.cpp  ring_buffer_test.cpp  server_config_test.cpp  system_config_test.cpp  unit_test_utils.cpp  unit_test_utils.hpp  zlib_adapter_test.cpp
python/: CMakeLists.txt  README.md  __init__.py  get_abi_tag.py  get_platform_tag.py  get_python_tag.py  hatch_build.py  pyproject.toml  pyxfr_utils.py  transferase_bindings.cpp  transferase_utils.py  version.py
python/pyxfr/: CMakeLists.txt  bindings_utils.cpp  bindings_utils.hpp  (+20 more)
src/: CMakeLists.txt  aligned_allocator.hpp  arguments.hpp  automatic_json.hpp  bins.cpp  bins.hpp  bins_writer.cpp  bins_writer.hpp  boost_json.cpp  boost_json.hpp  check.cpp  check.hpp  chrom_range.hpp  client.cpp  client.hpp  client_config.cpp  client_config.hpp  client_sync.cpp  client_sync.hpp  command_bins.cpp  command_bins.hpp  command_check.cpp  command_check.hpp  command_compress.cpp  command_compress.hpp  command_config.cpp  command_config.hpp  command_config_argset.hpp  command_format.cpp  command_format.hpp  command_index.cpp  command_index.hpp  command_intervals.cpp  command_intervals.hpp  command_list.cpp  command_list.hpp  command_lookup.cpp  command_lookup.hpp  command_merge.cpp  command_merge.hpp  (+151 more)
test/: CMakeLists.txt  boost_json_test.cpp  client_config_test.cpp  command_bins_test.cpp  command_check_test.cpp  command_config_args_test.cpp  command_config_argset_test.cpp  command_config_test.cpp  command_format_test.cpp  command_index_test.cpp  command_intervals_test.cpp  command_merge_test.cpp  command_query_test.cpp  command_server_test.cpp  config_file_utils.cpp  config_file_utils_test.cpp  counts_file_format_test.cpp  counts_file_formats_test.cpp  cpg_index_data_test.cpp  cpg_index_meta_test.cpp  cpg_index_metadata_test.cpp  cpg_index_set_test.cpp  cpg_index_test.cpp  download_test.cpp  genome_index_data_test.cpp  genome_index_metadata_test.cpp  genome_index_set_test.cpp  genome_index_test.cpp  genomic_interval_test.cpp  lru_tracker_test.cpp  methylome_client_test.cpp  methylome_data_test.cpp  methylome_metadata_test.cpp  methylome_set_test.cpp  methylome_test.cpp  request_handler_test.cpp  request_test.cpp  ring_buffer_test.cpp  server_config_test.cpp  transferase_metadata_test.cpp  (+4 more)
tests/: CMakeLists.txt  command_config_argset_test.cpp  command_config_test.cpp  counts_file_formats_test.cpp  cpg_index_meta_test.cpp  cpg_index_test.cpp  genomic_interval_test.cpp  methylome_set_test.cpp  methylome_test.cpp  request_handler_test.cpp  request_test.cpp
(+228 files in other folders)
